fixed gs-1672, added spacing as per jira (#1297)

--- a/styles/Campaign.module.scss
+++ b/styles/Campaign.module.scss
@@ -231,6 +231,10 @@
         font-size: 12px;
         line-height: 16px;
         color: #ff0000;
+        margin-top: 10px;
+    }
+    &_error::first-letter {
+        text-transform: uppercase;
     }
     &_box {
         @extend .mb-4, .p-4;
